package es.us.dp1.l4_04_24_25.saboteur.card;

import org.springframework.data.repository.CrudRepository;

public interface CardRepository extends CrudRepository<Card, Integer> {
    
}