package es.us.dp1.l4_04_24_25.saboteur.tunnel;

import org.springframework.data.repository.CrudRepository;

public interface TunnelRepository extends CrudRepository<Tunnel, Integer> {
    
}
